Ported to 1.20.3-1.20.4